--- a/src/css/header.css
+++ b/src/css/header.css
@@ -52,7 +52,7 @@ body {
   font-size: 1rem;
   line-height: 1;
   position: relative;
-  top: 2.5%; /* compensate for built-in line height in font */
+  top: 0.06em; /* compensate for built-in line height in font */
   letter-spacing: -0.02em;
   padding: 0;
   margin: 0 1rem;
